--- a/html y Css/Aumento de espacio/CSS/style.css
+++ b/html y Css/Aumento de espacio/CSS/style.css
@@ -37,7 +37,7 @@
     position: absolute;
     top: 16px;
     width: 50px;
-    height: 25px;
+    height: 30px;
     background: #f00;
     line-height: 20px;
     border-radius: 50px;
@@ -46,9 +46,10 @@
     transition: .5s;
   }
   .btn i{
-    font-size: 20px;
+    justify-content: center;
+    font-size: 15px;
     color: white;
-    line-height: 25px;
+    line-height: 30px;
     transition: all .7s ease;
   }
   .container:hover input{
@@ -60,11 +61,12 @@
   .MENU{
     position: fixed;
     height: 100%;
+    width: 280px;
     overflow: auto;
     left: -320px;
   }
   .sidebar{
-    width: 320px;
+    width: 280px;
     height: 100%;
     background: #333;
     overflow: auto;
@@ -108,7 +110,8 @@
   button{
     background: black;
     color: white;
-    padding: 10px 20px;
+    height: 30px;
+    width: 100px;
     border: 1px solid black;
     position: fixed;
     cursor: pointer;
@@ -214,12 +217,6 @@
     align-items: center;
     width: 100%;
     margin-bottom: 20px;
-  }
-  
-  .arrow {
-    font-size: 40px;
-    color: #333;
-    cursor: pointer;
   }
   
   .offer-content {
