--- a/html y Css/Home Page/CSS/style.css
+++ b/html y Css/Home Page/CSS/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,7 +10,13 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    }
   header {
     background-color: #333;
     color: #fff;
@@ -130,6 +135,7 @@
     bottom: 0;
     width: 100%;
   }
+  
   nav ul {
     list-style: none;
     margin: 0;
@@ -142,12 +148,14 @@
   nav ul li {
     position: relative;
   }
+  
   nav ul li a {
     color: #fff;
     display: block;
     padding: 10px;
     text-decoration: none;
   }
+  
   nav ul li ul {
     display: none;
     position: absolute;
@@ -156,54 +164,121 @@
     background-color: #333;
     z-index: 999;
   }
+  
   nav ul li:hover ul {
     display: block;
   }
+  
   nav ul li ul li {
     display: block;
   }
+  .cont{
+    text-align: center;
+    font-size: 80px;
+
+  }
   .container span {
-    font-size: 120pt;
     font-weight: bold;
     position: relative;
     font-family: "Fredoka One";
     cursor: pointer;
     transition: all 300ms ease-in-out;
   }
-  .container span::before {
+  .cont span::before {
     content: var(--l);
     position: absolute;
     transform: scale(1.1);
     filter: blur(15px);
   }
-  .container span::after {
+  .cont span::after {
     content: var(--l);
     position: absolute;
-    height: 200%;
-    width: 300px;
-    top: 80%;
-    left: 0;
-    filter: blur(30px);
+    filter: blur(20px);
     transform: rotateX(50deg);
   }
-  .container span:hover {
+  .cont span:hover {
     filter: contrast(250%);
   }
-  .container span:nth-child(1) {
-    color: #00bef8;
-  }
-  .container span:nth-child(2) {
-    color: #ff0697;
-  }
-  .container span:nth-child(3) {
-    color: #ff4d00;
-  }
-  .container span:nth-child(4) {
-    color: #ffe600;
-  }
-  .container span:nth-child(5) {
+  .cont span:nth-child(1) {
     color: #bb00ff;
   }
+  .cont span:nth-child(2) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(3) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(4) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(5) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(6) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(7) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(8) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(9) {
+    color: #bb00ff;
+  }
+  .cont span:nth-child(10) {
+    color: #bb00ff;
+  }
+  .dropZone {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 30vh;
+    border: 2px solid #02ff0280;
+    }
+    
+    .p_interno{
+    font-size: 18px;
+    animation: sombraTexto 1s infinite;
+    }
+    
+    .dropZone.is-active {
+    border: 2px dashed #fff;
+    background-color: #02ff0280;
+    animation: contenidoInterno 1.5s infinite;
+    animation-timing-function: linear;
+    }
+    
+    @keyframes sombraTexto {
+    0%
+    {
+      font-size: 20px;
+      text-shadow: 1px 5px 15px #02ff0280;
+    }
+    50% {
+      font-size: 21px;
+      text-shadow: 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280;
+    }
+    
+    100% {
+      font-size: 20px;
+      text-shadow: 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280;
+    }
+    }
+    
+    @keyframes contenidoInterno {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1.2);
+    }
+    }
+  
   @media screen and (max-width: 600px) {
     nav ul li:hover ul {
       display: flex;
