--- a/html y Css/Aumento de espacio/CSS/style.css
+++ b/html y Css/Aumento de espacio/CSS/style.css
@@ -61,7 +61,7 @@
   }
   .MENU{
     position: fixed;
-    height: 100%;
+    height: 90%;
     width: 280px;
     overflow: auto;
     left: -320px;
@@ -129,6 +129,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 40px;
   }
   nav ul {
     list-style: none;
