--- a/html y Css/Perfil/Css/style.css
+++ b/html y Css/Perfil/Css/style.css
@@ -3,27 +3,31 @@
     margin: 0;
     padding: 0;
   }
-  body{
+  
+  body {
     margin: 0;
     font-family: sans-serif;
     background-image: url(../img/ventajas-desventajas-uso-nube.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
+  
   main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-    }
+  }
+  
   header {
     background-color: #333;
     color: #fff;
     padding: 10px;
     border: 1px solid black;
   }
-  input{
+  
+  input {
     outline: none;
     box-sizing: border-box;
     height: 22px;
@@ -36,10 +40,12 @@
     transition: all .7s ease;
     text-align: center;
   }
-  ::placeholder{
+  
+  ::placeholder {
     color: grey;
   }
-  .btn{
+  
+  .btn {
     position: absolute;
     top: 16px;
     width: 50px;
@@ -51,41 +57,47 @@
     cursor: pointer;
     transition: .5s;
   }
-  .btn i{
+  
+  .btn i {
     justify-content: center;
     font-size: 15px;
     color: white;
     line-height: 30px;
     transition: all .7s ease;
   }
-  .container:hover input{
+  
+  .container:hover input {
     width: 350px;
   }
-  .container:hover i{
+  
+  .container:hover i {
     transform: rotate(-360deg);
   }
-  .MENU{
+  
+  .MENU {
     position: fixed;
     height: 90%;
     width: 280px;
     overflow: auto;
     left: -320px;
-    position: absolute;
   }
-  .sidebar{
+  
+  .sidebar {
     width: 280px;
     height: 100%;
     background: #333;
     overflow: auto;
     float: left;
   }
+  
   .sidebar img {
     width: 100px;
     display: block;
     margin: 10px auto;
     opacity: .7;
   }
-  .side-hide{
+  
+  .side-hide {
     float: right;
     margin: 10px;
     color: black;
@@ -93,48 +105,55 @@
     font-size: 24px;
     cursor: pointer;
   }
-  .sidebar ul li{
+  
+  .sidebar ul li {
     list-style: none;
     padding: 12px 10px;
   }
-  .sidebar ul li:hover{
+  
+  .sidebar ul li:hover {
     background: #4e4e4e;
     cursor: pointer;
   }
-  .sidebar ul li a{
+  
+  .sidebar ul li a {
     text-decoration: none;
     color: white;
     font-size: 17px;
     font-family: sans-serif;
     opacity: .7;
   }
-  .content{
+  
+  .content {
     padding: 20px;
     font-size: 16px;
     color: white;
     font-family: sans-serif;
   }
-  button{
+  
+  button {
     background: black;
     color: white;
     height: 30px;
     width: 100px;
     border: 1px solid black;
+    position: absolute;
     cursor: pointer;
     display: block;
-    position: absolute;
+    float: top;
   }
-  .show{
+  
+  .show {
     left: 0;
   }
-  footer{
+  
+  footer {
     background-color: white;
     padding: 1em 0;
     text-align: center;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
   }
   
   nav ul {
@@ -173,11 +192,12 @@
   nav ul li ul li {
     display: block;
   }
-  .cont{
+  
+  .cont {
     text-align: center;
     font-size: 80px;
-
   }
+  
   .container span {
     font-weight: bold;
     position: relative;
@@ -185,51 +205,38 @@
     cursor: pointer;
     transition: all 300ms ease-in-out;
   }
+  
   .cont span::before {
     content: var(--l);
     position: absolute;
     transform: scale(1.1);
     filter: blur(15px);
   }
+  
   .cont span::after {
     content: var(--l);
     position: absolute;
     filter: blur(20px);
     transform: rotateX(50deg);
   }
+  
   .cont span:hover {
     filter: contrast(250%);
   }
-  .cont span:nth-child(1) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(2) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(3) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(4) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(5) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(6) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(7) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(8) {
-    color: #bb00ff;
-  }
-  .cont span:nth-child(9) {
-    color: #bb00ff;
-  }
+  
+  .cont span:nth-child(1),
+  .cont span:nth-child(2),
+  .cont span:nth-child(3),
+  .cont span:nth-child(4),
+  .cont span:nth-child(5),
+  .cont span:nth-child(6),
+  .cont span:nth-child(7),
+  .cont span:nth-child(8),
+  .cont span:nth-child(9),
   .cont span:nth-child(10) {
     color: #bb00ff;
   }
+  
   .dropZone {
     display: flex;
     justify-content: center;
@@ -237,23 +244,22 @@
     width: 50%;
     height: 30vh;
     border: 2px solid #02ff0280;
-    }
-    
-    .p_interno{
+  }
+  
+  .p_interno {
     font-size: 18px;
     animation: sombraTexto 1s infinite;
-    }
-    
-    .dropZone.is-active {
+  }
+  
+  .dropZone.is-active {
     border: 2px dashed #fff;
     background-color: #02ff0280;
     animation: contenidoInterno 1.5s infinite;
     animation-timing-function: linear;
-    }
-    
-    @keyframes sombraTexto {
-    0%
-    {
+  }
+  
+  @keyframes sombraTexto {
+    0% {
       font-size: 20px;
       text-shadow: 1px 5px 15px #02ff0280;
     }
@@ -261,14 +267,13 @@
       font-size: 21px;
       text-shadow: 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280;
     }
-    
     100% {
       font-size: 20px;
       text-shadow: 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280, 1px 5px 15px #02ff0280;
     }
-    }
-    
-    @keyframes contenidoInterno {
+  }
+  
+  @keyframes contenidoInterno {
     0% {
       transform: scale(1);
     }
@@ -278,9 +283,8 @@
     100% {
       transform: scale(1.2);
     }
-    }
-
-
+  }
+  
   @media screen and (max-width: 600px) {
     nav ul li:hover ul {
       display: flex;
@@ -290,21 +294,23 @@
     .offer-container {
       max-width: 100%;
     }
-    .offer-content{
+    .offer-content {
       flex-direction: column;
     }
-    .input{
+    .input {
       position: static;
     }
-    .btn{
+    .btn {
       position: static;
     }
   }
+  
   @media screen and (max-width: 1240px) {
-    .MENU{
+    .MENU {
       left: -320px;
     }
   }
+  
   .color-box span:last-child {
     font-size: 36px;
     font-weight: bold;
@@ -328,6 +334,7 @@
       transform: translateX(0);
     }
   }
+  
   .color-box {
     width: 200px;
     height: 200px;
@@ -390,8 +397,7 @@
     75% {
       transform: translateX(50%);
     }
-    100% {
+     100% {
       transform: translateX(0);
     }
   }
-      
