--- a/Front End/Login/Style.css
+++ b/Front End/Login/Style.css
@@ -13,9 +13,9 @@ form{
 }
 footer{
     background-color: white;
-    padding: 1em 0;
+    padding: 1em;
     text-align: center;
     position: absolute;
     bottom: 0;
-    width: 98%;
+    width: 100%;
   }
